Внесение Mapping в ArmyForKing. PhoneDirectory - вместо текста вернул конкретные данные